--- a/src/Header.css
+++ b/src/Header.css
@@ -18,20 +18,24 @@
   display: flex;
   flex: 1;
   align-items: center;
-  border-radius: 24px;
+  border-radius: 4px;
+  background-color: white;
 }
 
 .header__searchInput {
+  z-index: 1;
   height: 12px;
   padding: 10px;
   border: none;
   width: 100%;
+  border-radius: 4px;
 }
 
 .header__searchIcon {
   padding: 5px;
   height: 22px !important;
   background-color: #cd9042;
+  border-radius: 0 4px 4px 0;
 }
 
 .header__nav {
